--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npx nodemon server.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-router": "^0.0.1",
+    "express-session": "^1.17.1",
+    "mongoose": "^5.12.5",
+    "node": "^15.14.0",
+    "nodemon": "^2.0.7",
+    "uuid": "^8.3.2"
+  }
 }
