--- a/backend/package.json
+++ b/backend/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-router": "^0.0.1",
     "express-session": "^1.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.5",
     "node": "^15.14.0",
     "nodemon": "^2.0.7",
