--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,15 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "bootstrap": "^5.0.0-beta3",
-    "bootstrap-icons": "^1.4.1",
+    "fontsource-roboto": "^4.0.0",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.5.2",
-    "react-bootstrap-icons": "^1.4.0",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-router-dom": "^5.2.0",
